--- a/main/templates/main/list.html
+++ b/main/templates/main/list.html
@@ -7,21 +7,27 @@ List: {{ list.name }}
 {% block content %}
 
 <h1>{{ list.name }}</h1>
-
 <h4>List Items</h4>
-<ul>
-  {% for item in list.item_set.all %}
-  <li>
-    {{ item.text }}
 
-    {% if item.complete == True %}
-    - COMPLETE
-    {% else %}
-    - INCOMPLETE
-    {% endif %}
-  </li>
-  {% endfor %}
-</ul>
+<form action="#" method="post">
+  {% csrf_token %}
+  <ul>
+    {% for item in list.item_set.all %}
+    <li>
+      {{ item.text }}
+      {% if item.complete == True %}
+      <input type="checkbox" value="clicked" name="c{{item.id}}" checked>
+      {% else %}
+      <input type="checkbox" value="clicked" name="c{{item.id}}">
+      {% endif %}
+    </li>
+    {% endfor %}
+  </ul>
+
+  <button type="submit" name="save" value="save">Save</button>
+  <input type="text" name="new">
+  <button type="submit" name="newItem" value="newItem">Add Item</button>
+</form>
 
 
 {% endblock content %}
