--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,16 +4,77 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <style>
+    body {
+      font-family: "Lato", sans-serif;
+    }
+
+    .sidenav {
+      height: 100%;
+      width: 160px;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #111;
+      overflow-x: hidden;
+      padding-top: 20px;
+    }
+
+    .sidenav a {
+      padding: 6px 8px 6px 16px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #818181;
+      display: block;
+    }
+
+    .sidenav a:hover {
+      color: #f1f1f1;
+    }
+
+    .main {
+      margin-left: 160px;
+      /* Same as the width of the sidenav */
+      padding: 0px 10px;
+    }
+  </style>
+
   <title>
     {% block title %}Django Main App{% endblock title %}
   </title>
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    crossorigin="anonymous">
+
+
 </head>
 
 <body>
-  <div id="name">
-    {% block content %}
-    {% endblock content %}
+
+  <div class="sidenav">
+    <a href="/">Home</a>
+    <a href="/create">Create</a>
+    <a href="/2">View</a>
   </div>
+
+
+  <div id="content" class="main">
+    <div class="row justify-content-center">
+      <div class="col-8">
+        <h1 class="mt-2">My Site</h1>
+        <hr class="mt-0 mb-4">
+        {% block content %}
+        {% endblock content %}
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+
 </body>
 
 </html>
