--- a/main/templates/main/create.html
+++ b/main/templates/main/create.html
@@ -5,12 +5,17 @@ Create New List
 {% endblock title %}
 
 {% block content %}
-Create Page
 
-<form action="/create/" method="post">
+<h3>Create Page</h3>
+
+<form action="/create/" method="post" class="form-group">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit" name="save">Create New</button>
+  <div class="input-group mb-3">
+    <div class="input-group-prepend">
+      <button type="submit" name="save" class="btn btn-success">Create New</button>
+    </div>
+    {{ form.name }}
+  </div>
 </form>
 
 {% endblock content %}
