--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -66,8 +66,16 @@
       <div class="col-8">
         <h1 class="mt-2">My Site</h1>
         <hr class="mt-0 mb-4">
+
+        <!-- {% if user.is_authenticated %} -->
         {% block content %}
         {% endblock content %}
+        <!-- {% else %}
+        <p>
+          You are not logged in.
+          <a class="mt-2" href="/login">Login to your Account</a>
+        </p>
+        {% endif %} -->
       </div>
     </div>
   </div>
